Revert "update for rename of open_issues/nightly_builds.mdwn to service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn"
This reverts commit 7bd2336adf4c99d9eeabaf76251aab96b64740dc.

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
@@ -36,7 +36,7 @@ There is infrastructure available to test whole OS installations.
 
 ---
 
-See also [[service_solahart_jakarta_selatan__082122541663/nightly_builds]].
+See also [[nightly_builds]].
 
 
 # Debian Jenkins Instance
