Revert "update for rename of open_issues/debian_cross_toolchain.mdwn to service_solahart_jakarta_selatan__082122541663/debian_cross_toolchain.mdwn"
This reverts commit 77e80d607a960b907b59333e2a2768af602908e9.

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
@@ -18,7 +18,7 @@ Resources:
 
   * [[toolchain/cross-gnu]]
 
-      * [[service_solahart_jakarta_selatan__082122541663/Debian_cross_toolchain]]
+      * [[Debian_Cross_Toolchain]]
 
   * As reported in the [[news/2010-05-31]] news, there's Hydra doing nightly
     builds / Nix packages.
