Revert "update for rename of open_issues/screen.mdwn to service_solahart_jakarta_selatan__082122541663/screen.mdwn"
This reverts commit b607f41269608a29b2d121aa7963a3a72a6f0609.

--- a/public_hurd_boxen/installation.mdwn
+++ b/public_hurd_boxen/installation.mdwn
@@ -117,7 +117,7 @@ Steps for *install_crosshurd*:
 
       * \# /install_packages
 
-  * Until [[service_solahart_jakarta_selatan__082122541663/screen]] is fixed:
+  * Until [[open_issues/screen]] is fixed:
 
       * Install `flubber:~tschwinge/screen_4.0.3-11_hurd-i386.deb` instead.
 
