Revert "update for rename of open_issues/debian_cross_toolchain.mdwn to service_solahart_jakarta_selatan__082122541663/debian_cross_toolchain.mdwn"
This reverts commit 5cc49fedde9dfca537178cf85807687d6ee5ae04.

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
@@ -32,7 +32,7 @@ There is infrastructure available to test whole OS installations.
 
 ---
 
-[[service_solahart_jakarta_selatan__082122541663/Debian_cross_toolchain]] for cross-building?
+[[Debian_Cross_Toolchain]] for cross-building?
 
 ---
 
