--- a/service_solahart_jakarta_selatan__082122541663/bash_vs_screen_vs_sigint.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/bash_vs_screen_vs_sigint.mdwn
@@ -9,4 +9,4 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
   * [[bash]]
-  * [[service_solahart_jakarta_selatan__082122541663/screen]]
+  * [[screen]]
