Revert "update for rename of open_issues/latrace.mdwn to service_solahart_jakarta_selatan__082122541663/latrace.mdwn"
This reverts commit 40bafb05b4649ab8924d6579367ce9c447ac6278.

--- a/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
@@ -26,7 +26,7 @@ done for [[performance analysis|service_solahart_jakarta_selatan__082122541663/p
 
   * [[ltrace]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/latrace]]
+  * [[latrace]]
 
   * [[community/gsoc/project_ideas/dtrace]]
 
