Revert "update for rename of open_issues/clock_gettime.mdwn to service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn"
This reverts commit 13343b1426060e76b18a4969c99715b72fe79b47.

--- a/service_solahart_jakarta_selatan__082122541663/vdso.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/vdso.mdwn
@@ -41,7 +41,7 @@ Having vDSO code might be useful for:
     `gettimeofday`/`clock_gettime` and similar calls instead of using the
     special [[hurd/libshouldbeinlibc]]'s `<maptime.h>` interface.
 
-    Can implement [[`clock_gettime` stuff|service_solahart_jakarta_selatan__082122541663/clock_gettime]] more easily that way,
+    Can implement [[`clock_gettime` stuff|clock_gettime]] more easily that way,
     for example for nanosecond precision?
 
     Now, the [[mapped-time_interface]] is virtualizable -- the question is
