Revert "update for rename of open_issues/clock_gettime.mdwn to service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn"
This reverts commit e1f11c7da42808bbdbf8653825ab38953894a9c6.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -695,7 +695,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
             <desrt> CLOCK_MONOTONIC is an easy enough requirement to implement
               or fake.... "modern event polling framework" is another story...
 
-        [[service_solahart_jakarta_selatan__082122541663/clock_gettime]].
+        [[clock_gettime]].
 
             <braunr> yes, but again, we do have the underlying machinery to add
               it
@@ -1886,7 +1886,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
       * <a name="posix_timers">POSIX Timers</a>
 
-        `timer_create`, `timer_delete`, [[`clock_gettime`|service_solahart_jakarta_selatan__082122541663/clock_gettime]], and
+        `timer_create`, `timer_delete`, [[`clock_gettime`|clock_gettime]], and
         so on.
 
     For specific packages:
