Revert "update for rename of open_issues/clock_gettime.mdwn to service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn"
This reverts commit 128883bdfb3a3b442b03252f0612846ecc076b9a.

--- a/service_solahart_jakarta_selatan__082122541663/pfinet_vs_system_time_changes.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/pfinet_vs_system_time_changes.mdwn
@@ -92,7 +92,7 @@ This was very likely a misdiagnosis.
     <antrik> pfinet can't cope with larger system time changes because it can't
       use a monotonic clock
 
-[[service_solahart_jakarta_selatan__082122541663/clock_gettime]].
+[[clock_gettime]].
 
     <braunr> well when librt becomes easily usable everywhere (it it's
       possible), it will be quite easy to work around this issue
