Revert "update for rename of open_issues/performance.mdwn to service_solahart_jakarta_selatan__082122541663/performance.mdwn"
This reverts commit f1dcd80160942308fc3e394c860d29f804889b16.

--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -77,7 +77,7 @@ abandoned).
       * [[nightly_builds_deb_packages]]
 
   * <http://www.phoronix-test-suite.com/> -- ``comprehensive testing and
-    benchmarking platform''.  This one might be useful for [[service_solahart_jakarta_selatan__082122541663/performance]]
+    benchmarking platform''.  This one might be useful for [[performance]]
     testing, too?
 
   * <http://ltp.sourceforge.net/>
