Revert "update for rename of open_issues/formal_verification.mdwn to service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn"
This reverts commit d23d230483c9bda618fa14e490b70456cf08eca1.

--- a/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
@@ -28,7 +28,7 @@ There are locking issues in the Hurd's libraries.
 
 # Formal Verification
 
-Methods of [[service_solahart_jakarta_selatan__082122541663/formal_verification]] should be applied to get an understanding of
+Methods of [[formal_verification]] should be applied to get an understanding of
 the behavior of the locking logic.  There are tools for formal
 verification/[[code_analysis]] that can likely help here.
 
