Revert "update for rename of open_issues/profiling.mdwn to service_solahart_jakarta_selatan__082122541663/profiling.mdwn"
This reverts commit 2c40f88ece945e43113bcd9ab2f56ad06696780c.

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 article"]]) deals with analyzing how computing resources are used for
 completing a specified task.
 
-[[service_solahart_jakarta_selatan__082122541663/Profiling]] is one relevant tool.
+[[Profiling]] is one relevant tool.
 
 In [[microkernel]]-based systems, there is generally a considerable [[RPC]]
 overhead.
