Revert "update for rename of open_issues/term_blocking.mdwn to service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn"
This reverts commit a1d2f05edf63979f2d1cce93426ea9f30df3be04.

--- a/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
@@ -25,7 +25,7 @@ See also [[code_analysis]].
 
   * [[locking_issues]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/term_blocking]]
+  * [[term_blocking]]
 
 
 # Bounty
