--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -2597,7 +2597,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
         in XPG strerror function`.  Change needed for
         `sysdeps/mach/xpg-strerror.c`?
       * a91710475294c66d0005bdaae0919d36ef8ce3d2 -- sotruss ([[debugging]],
-        [[service_solahart_jakarta_selatan__082122541663/profiling]]).  Does it work?
+        [[profiling]]).  Does it work?
       * b1ebd700c5295a449f8d114740f0d1fb6e6b2eb5 +
         80e2212d8e59933a1641f029ebd360526ff0e074 +
         4997db742946d08be4378cf91221f558f928bc73 -- `Don't document si_code
