Revert "update for rename of open_issues/git_duplicated_content.mdwn to service_solahart_jakarta_selatan__082122541663/git_duplicated_content.mdwn"
This reverts commit 4bb631cc93ab087c370f466205e9979d4960a424.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1836,7 +1836,7 @@ Same issue as [[term_blocking]] perhaps?
       functions completely restart
     <braunr> (e.g. one call to printf to write twice its output)
 
-[[service_solahart_jakarta_selatan__082122541663/git_duplicated_content]], [[git-core-2]].
+[[git_duplicated_content]], [[git-core-2]].
 
     * braunr is cooking a patch to fix pthread cancellation in
         pthread_cond_{,timed}wait, smells good
