--- a/gcc.mdwn
+++ b/gcc.mdwn
@@ -15,7 +15,7 @@ is included in the section entitled
 # <http://gcc.gnu.org/>
 
 
-# [[Maintenance|service_solahart_jakarta_selatan__082122541663/gcc]]
+# [[Maintenance|open_issues/gcc]]
 
 
 # Open Issues
