Revert "update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn"
This reverts commit 8b0526cfa2e17b586a2a9180d460a12d6ca4c5a8.

--- a/service_solahart_jakarta_selatan__082122541663/exec_memory_leaks.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/exec_memory_leaks.mdwn
@@ -63,7 +63,7 @@ There are is some memory leak in [[`exec`|hurd/translator/exec]].
 
 # 2012-11-25
 
-After twelve hours worth of `fork/exec` ([[service_solahart_jakarta_selatan__082122541663/Gcc]]'s `check-c` part of the
+After twelve hours worth of `fork/exec` ([[GCC]]'s `check-c` part of the
 testsuite), we got:
 
       PID  UID  PPID  PGrp  Sess TH  Vmem   RSS %CPU     User   System Args
