Revert "update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn"
This reverts commit d3a57d6fc95f9ba00f1e1bfe29316f928917ce65.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -2708,7 +2708,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
         0409959c86f6840510851a851a1588677a2e537b,
         e57b0c6100e63bfd816ae59339452eafc81f1d3a `C++11 thread_local
         destructors support`.  Anything needed to be done in our [[libpthread]]
-        and configured for us in [[service_solahart_jakarta_selatan__082122541663/Gcc]]?  Probably need to replicate the
+        and configured for us in [[GCC]]?  Probably need to replicate the
         `nptl/pthread_create.c` change, and fix
         `stdlib/Makefile`:`$(objpfx)tst-tls-atexit`.
 
