--- a/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
@@ -42,7 +42,7 @@ use it from GCC.
 
       * [[libc_variant_selection]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/Gcc]]
+  * [[GCC]]
 
     In `gcc/config.gcc`, set `default_gnu_indirect_function=yes` for us, like
     done for GNU/Linux.  See thread starting at [[!message-id
