Revert "update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn"
This reverts commit 9c7eef64a2fe8ce4c38f661935448124d311f4e2.

--- a/service_solahart_jakarta_selatan__082122541663/gnat.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnat.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_gcc]]
 
-Make the Ada programming language available on GNU/Hurd in its [[service_solahart_jakarta_selatan__082122541663/Gcc]] GNAT
+Make the Ada programming language available on GNU/Hurd in its [[GCC]] GNAT
 implementation, and enable Hurd-specific features.
 
 There is a [[!FF_project 259]][[!tag bounty]] on this task.
