Revert "update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn"
This reverts commit c5970c2e9bfe4a9a172dbe1ad826f53abedeeeb9.

--- a/service_solahart_jakarta_selatan__082122541663/fork_mach_port_mod_refs_ekern_urefs_owerflow.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/fork_mach_port_mod_refs_ekern_urefs_owerflow.mdwn
@@ -15,7 +15,7 @@ License|/fdl]]."]]"""]]
 
 # Original Report
 
-In the [[GCC testsuite|service_solahart_jakarta_selatan__082122541663/gcc]], at this point:
+In the [[GCC testsuite|gcc]], at this point:
 
     Running /home/tschwinge/tmp/gcc/hurd/gcc/testsuite/gcc.c-torture/unsorted/unsorted.exp ...
 
