Revert "update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn"
This reverts commit be224008c420457dc5bcc7cb98b1b8eda1d5f44b.

--- a/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
@@ -27,7 +27,7 @@ There is a [[!FF_project 276]][[!tag bounty]] on some of these tasks.
 
 # Static
 
-  * [[service_solahart_jakarta_selatan__082122541663/Gcc]]'s warnings.  Yes, really.
+  * [[GCC]]'s warnings.  Yes, really.
 
       * GCC plugins can be used for additional semantic analysis.  For example,
         <http://lwn.net/Articles/457543/>, and search for *kernel context* in
