Revert "update for rename of open_issues/systemd.mdwn to service_solahart_jakarta_selatan__082122541663/systemd.mdwn"
This reverts commit 349daae08616efe7e7a903bc80b4fd3d61ebff43.

--- a/service_solahart_jakarta_selatan__082122541663/Upstart.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/Upstart.mdwn
@@ -58,4 +58,4 @@ one can comfortably ignore the "expect fork/daemon" functionality of Upstart
 
 [[!tag open_issue_porting]]
 
-See also the discussion about upstart on the [[service_solahart_jakarta_selatan__082122541663/systemd]] page.
+See also the discussion about upstart on the [[systemd]] page.
