--- a/service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel.mdwn
@@ -90,7 +90,7 @@ kernel](http://www.kroah.com/log/linux/af_bus.html), Greg Kroah-Hartman,
     <teythoon> exactly
     <braunr> :p
 
-[[service_solahart_jakarta_selatan__082122541663/systemd]].
+[[systemd]].
 
 
 ## IRC, freenode, #hurd, 2014-02-23
