Revert "update for rename of open_issues/systemd.mdwn to service_solahart_jakarta_selatan__082122541663/systemd.mdwn"
This reverts commit 77fc086747bbf914c2b4650f1581b176b9d163b4.

--- a/service_solahart_jakarta_selatan__082122541663/system_initialization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/system_initialization.mdwn
@@ -39,4 +39,4 @@ License|/fdl]]."]]"""]]
 # [[Anatomy_of_a_Hurd_System]]
 
 
-# [[service_solahart_jakarta_selatan__082122541663/systemd]]
+# [[systemd]]
