Revert "update for rename of open_issues/hurd_init.mdwn to service_solahart_jakarta_selatan__082122541663/hurd_init.mdwn"
This reverts commit e05da4b73d98f79c1e8fdb604837b9d7e4c86f5e.

--- a/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
@@ -2550,7 +2550,7 @@ note the additional [[upstart]] page.
     <teythoon> did it ?
     <teythoon> i plan to rename /hurd/init to /hurd/startup
 
-[[service_solahart_jakarta_selatan__082122541663/hurd_init]].
+[[hurd_init]].
 
     <pere> nope. :)
     <pere> five boots in a row hung. :(
