Revert "update for rename of open_issues/syslog.mdwn to service_solahart_jakarta_selatan__082122541663/syslog.mdwn"
This reverts commit 5dfd7f70375605d22d7a55096d849c61d2aeca00.

--- a/public_hurd_boxen/installation/snubber.mdwn
+++ b/public_hurd_boxen/installation/snubber.mdwn
@@ -26,7 +26,7 @@ Yet more:
   * libyaml-perl (for ikiwiki's YAML field plugins)
 
 
-## [[service_solahart_jakarta_selatan__082122541663/syslog]]
+## [[open_issues/syslog]]
 
     $ find /etc/rc*/ | grep syslog | sudo xargs rm
 
