Revert "update for rename of open_issues/hurd_init.mdwn to service_solahart_jakarta_selatan__082122541663/hurd_init.mdwn"
This reverts commit 839e6be7568a57ad29882542d4eb8a4eaaee5282.

--- a/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
@@ -45,7 +45,7 @@ like Bushnell's Hurd paper.  All this should be unfied and streamlined.
 
 # Bootstrap
 
-## [[service_solahart_jakarta_selatan__082122541663/hurd_init]]
+## [[hurd_init]]
 
 ## IRC, freenode, #hurd, 2011-03-12
 
