Revert "update for rename of open_issues/hurd_init.mdwn to service_solahart_jakarta_selatan__082122541663/hurd_init.mdwn"
This reverts commit 065889679d297dc64feba03828917b048a1911da.

--- a/service_solahart_jakarta_selatan__082122541663/system_initialization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/system_initialization.mdwn
@@ -33,7 +33,7 @@ License|/fdl]]."]]"""]]
     <teythoon> that could help
 
 
-# [[service_solahart_jakarta_selatan__082122541663/hurd_init]]
+# [[hurd_init]]
 
 
 # [[Anatomy_of_a_Hurd_System]]
