--- a/service_solahart_jakarta_selatan__082122541663/performance/fork.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/fork.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 Our [[`fork` implementation|glibc/fork]] is nontrivial.
 
 To do: hard numbers.
-[[service_solahart_jakarta_selatan__082122541663/performance/Microbenchmarks]]?
+[[Microbenchmarks]]?
 
 
 # Windows / Cygwin
