Revert "update for rename of open_issues/performance/microbenchmarks.mdwn to service_solahart_jakarta_selatan__082122541663/performance/microbenchmarks.mdwn"
This reverts commit ce9c1fc3484da69d5662f5cf3ba7abde27a8d75e.

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -36,7 +36,7 @@ call|/glibc/fork]]'s case.
 
   * [[service_solahart_jakarta_selatan__082122541663/performance/Ipc_virtual_copy]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/performance/microbenchmarks]]
+  * [[microbenchmarks]]
 
   * [[microkernel_multi-server]]
 
