Revert "update for rename of open_issues/xen_lseek.mdwn to service_solahart_jakarta_selatan__082122541663/xen_lseek.mdwn"
This reverts commit 83a23d0f472263ab5ac8af54ddaa22222c8aa3a2.

--- a/service_solahart_jakarta_selatan__082122541663/performance/io_system/binutils_ld_64ksec.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/io_system/binutils_ld_64ksec.mdwn
@@ -35,5 +35,5 @@ shows the equivalent thing (`_llseek`, `read`) -- but Linux' I/O system isn't
 as slow as the Hurd's.
 
 As Samuel figured out later, this slowness may in fact be due to a Xen-specific
-issue, see [[service_solahart_jakarta_selatan__082122541663/Xen_lseek]].  After the latter has been addressed, we can
+issue, see [[Xen_lseek]].  After the latter has been addressed, we can
 re-evaluate this issue here.
