--- a/service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn
@@ -32,7 +32,7 @@ IRC, freenode, #hurd, 2011-07-23:
     < braunr> antrik: both could be induced by fragmentation
 
 
-# During [[service_solahart_jakarta_selatan__082122541663/performance/Ipc_virtual_copy]] testing
+# During [[IPC_virtual_copy]] testing
 
 IRC, freenode, #hurd, 2011-09-02:
 
