Revert "update for rename of open_issues/performance/ipc_virtual_copy.mdwn to service_solahart_jakarta_selatan__082122541663/performance/ipc_virtual_copy.mdwn"
This reverts commit 153da5fc59ca45995786323f71b307eafbb21e2c.

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -34,7 +34,7 @@ call|/glibc/fork]]'s case.
 
   * [[fork]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/performance/Ipc_virtual_copy]]
+  * [[IPC_virtual_copy]]
 
   * [[microbenchmarks]]
 
