Revert "update for rename of open_issues/hurd_101.mdwn to service_solahart_jakarta_selatan__082122541663/hurd_101.mdwn"
This reverts commit 543dd7164657fd79579ec4de25f9843060819b7a.

--- a/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
@@ -194,7 +194,7 @@ RPC stubs.
   * <http://www.gnu.org/software/global/>
 
 
-# [[service_solahart_jakarta_selatan__082122541663/Hurd_101]]
+# [[Hurd_101]]
 
 
 # [[hurd/IO_path]]
