Revert "update for rename of open_issues/xattr.mdwn to service_solahart_jakarta_selatan__082122541663/xattr.mdwn"
This reverts commit 8103fcbdf04b522e0c81925b65931c2a6c95b44b.

--- a/community/gsoc/project_ideas/xattr.mdwn
+++ b/community/gsoc/project_ideas/xattr.mdwn
@@ -38,7 +38,7 @@ Completing this project will require digging into some parts of the Hurd, but
 it should be quite doable without previous Hurd experience. Some experience
 with xattrs might help a bit, but shouldn't be really necessary either.
 
-Some previous work on xattr support is [[available|service_solahart_jakarta_selatan__082122541663/xattr]], and
+Some previous work on xattr support is [[available|open_issues/xattr]], and
 might serve as a starting point.
 
 Possible mentors: Samuel Thibault (youpi)
