Revert "update for rename of open_issues/mach_migrating_threads.mdwn to service_solahart_jakarta_selatan__082122541663/mach_migrating_threads.mdwn"
This reverts commit 1468d6cdd734bc80e3f3fc25fba5fa8d30157846.

--- a/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
@@ -83,7 +83,7 @@ In context of <https://teythoon.cryptobitch.de/posts/my-worst-week-yet/>.
     <braunr> teythoon: actually, thread migration isn't required for resource
       accounting
 
-[[service_solahart_jakarta_selatan__082122541663/Mach_migrating_threads]].
+[[Mach_migrating_threads]].
 
     <teythoon> braunr: but it solves it for free, doesn't it?
     <braunr> teythoon: no
