Revert "update for rename of open_issues/glibc_ioctls.mdwn to service_solahart_jakarta_selatan__082122541663/glibc_ioctls.mdwn"
This reverts commit a3619bc26a6f895354f7f02847dcc9434a2bb4a4.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -1790,7 +1790,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
             <braunr> i doubt it
             <braunr> mlock could be, but mlockall only partially
 
-      * [[service_solahart_jakarta_selatan__082122541663/Glibc_ioctls]]
+      * [[glibc_IOCTLs]]
 
       * Support for `$ORIGIN` in the dynamic linker, `ld.so`
 
