Revert "update for rename of open_issues/gdb/gdbserver.mdwn to service_solahart_jakarta_selatan__082122541663/gdb/gdbserver.mdwn"
This reverts commit 027329040b7ab65dfb38c581b6220093a8dc834f.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -114,7 +114,7 @@ Last reviewed up to Git commit c2853f3d99797a321c37948297441ca6021f719a
 
           * glibc-tdep et al. also for GNU/Hurd?
 
-      * [[service_solahart_jakarta_selatan__082122541663/gdb/gdbserver]]
+      * [[gdb/gdbserver]]
 
       * In `gdb/gnu-nat.c:gnu_wait`, we don't implement
         `gdb/target/wait.h:TARGET_WNOHANG`.  What is this needed for?
