Revert "update for rename of open_issues/virtual_square_view-os.mdwn to service_solahart_jakarta_selatan__082122541663/virtual_square_view-os.mdwn"
This reverts commit 21c947f22d7e8847a51ce4c2055108146acf67dc.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization/networking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization/networking.mdwn
@@ -12,7 +12,7 @@ License|/fdl]]."]]"""]]
 
 Collection about stuff that is relevant for *virtualization* and *networking*.
 
-  * [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]]
+  * [[Virtual_Square_View-OS]]
 
   * [*Virtual Networks*](http://virtualsquare.org/vn.html)
 
@@ -27,7 +27,7 @@ Collection about stuff that is relevant for *virtualization* and *networking*.
     level.* -- what we're doing with our approach for overriding the default
     [[hurd/translator/pfinet]] by setting environment variables.
 
-    Project is now part of [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]].
+    Project is now part of [[Virtual_Square_View-OS]].
 
 
 # OpenVPN
