Revert "update for rename of open_issues/virtual_square_view-os.mdwn to service_solahart_jakarta_selatan__082122541663/virtual_square_view-os.mdwn"
This reverts commit 4a26fbc93d63a9c2907647a603e7da71a5453e0b.

--- a/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
@@ -388,7 +388,7 @@ Continue reading about the [[benefits_of_a_native_Hurd_implementation]].
     <antrik> or maybe View OS ? ;-)
     <antrik> whatever, you'll find it :-)
 
-[[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]].
+[[Virtual_Square_View-OS]].
 
     <antrik> I'm not sure it's really worthwhile to use this either
       though... the most meaningful interaction is probably at the FS level,
