Revert "update for rename of open_issues/glibc_ioctls.mdwn to service_solahart_jakarta_selatan__082122541663/glibc_ioctls.mdwn"
This reverts commit 43f459879fd661ef8babe3bb0dfd9fc870ca5e7b.

--- a/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
@@ -2644,7 +2644,7 @@ note the additional [[upstart]] page.
     <gnu_srs> k!
 
 
-## [[service_solahart_jakarta_selatan__082122541663/Glibc_ioctls]], `TIOCCONS`
+## [[glibc_IOCTLs]], `TIOCCONS`
 
 
 ## IRC, OFTC, #debian-hurd, 2014-02-04
