Revert "update for rename of open_issues/virtual_square_view-os.mdwn to service_solahart_jakarta_selatan__082122541663/virtual_square_view-os.mdwn"
This reverts commit 70a6c4d99a7b264378165a5a26e3defa0ed41397.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -33,7 +33,7 @@ An index of things to work on w.r.t. virtualization.
 
       * [[Capsicum]]
 
-      * [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]]
+      * [[Virtual_Square_View-OS]]
 
       * [Namespace file descriptors](http://lwn.net/Articles/407495/),
         2010-09-29
