Revert "update for rename of open_issues/alarm_setitimer.mdwn to service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn"
This reverts commit 50efd7ba2e6df54c8068d94d6578906f6fa421da.

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -1827,7 +1827,7 @@ IRC, unknown channel, unknown date:
                             _hurd_itimerval.it_value.tv_usec / 1000,
                             MACH_PORT_NULL);
 
-[[service_solahart_jakarta_selatan__082122541663/alarm_setitimer]].
+[[alarm_setitimer]].
 
     <braunr> gdb ?
     <braunr> i thought ntpdate was the program freezing
@@ -2050,7 +2050,7 @@ IRC, unknown channel, unknown date:
     <braunr> (your change makes it possible to save the mach_msg receive if the
       io_select blocked, which is good, but not required)
 
-See also [[service_solahart_jakarta_selatan__082122541663/alarm_setitimer]].
+See also [[alarm_setitimer]].
 
 
 #### IRC, freenode, #hurd, 2013-01-22
