Revert "update for rename of open_issues/linux_as_the_kernel.mdwn to service_solahart_jakarta_selatan__082122541663/linux_as_the_kernel.mdwn"
This reverts commit 28631418c4f48dc696779707d9c91af284deed9b.

--- a/service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel.mdwn
@@ -95,7 +95,7 @@ kernel](http://www.kroah.com/log/linux/af_bus.html), Greg Kroah-Hartman,
 
 ## IRC, freenode, #hurd, 2014-02-23
 
-In context of [[service_solahart_jakarta_selatan__082122541663/linux_as_the_kernel]], *IRC, freenode, #hurd, 2014-02-23*.
+In context of [[linux_as_the_kernel]], *IRC, freenode, #hurd, 2014-02-23*.
 
     <desrt> mach seems like this really simple thing when you first explain
       what a microkernel is
