Revert "update for rename of open_issues/exec_memory_leaks.mdwn to service_solahart_jakarta_selatan__082122541663/exec_memory_leaks.mdwn"
This reverts commit b806ca211baa67ca9252bffd121c3b807e659c58.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -974,7 +974,7 @@ Most of the issues raised on this page has been resolved, a few remain.
     <braunr> exec weights 164M eww, we definitely have to fix that leak
     <braunr> the leaks are probably due to wrong mmap/munmap usage
 
-[[service_solahart_jakarta_selatan__082122541663/exec_memory_leaks]].
+[[exec_memory_leaks]].
 
 
 ### IRC, freenode, #hurd, 2012-08-29
