Revert "update for rename of open_issues/alarm_setitimer.mdwn to service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn"
This reverts commit e496a236d16c0b221110d80652d779fcd4f3394d.

--- a/service_solahart_jakarta_selatan__082122541663/select_vs_signals.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select_vs_signals.mdwn
@@ -23,7 +23,7 @@ IRC, freenode, #hurd, 2011-04-02
 
 # IRC, freenode, #hurd, 2013-01-05
 
-In context of [[service_solahart_jakarta_selatan__082122541663/alarm_setitimer]].
+In context of [[alarm_setitimer]].
 
     <youpi> it's a know issue in select
     <youpi> it's not interruptible by a SIGALRM for instance
