Revert "update for rename of open_issues/libpthread_dlopen.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread_dlopen.mdwn"
This reverts commit 5c34fd5b0590bda4cd0a4c19abc64795fd211eef.

--- a/service_solahart_jakarta_selatan__082122541663/packaging_libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/packaging_libpthread.mdwn
@@ -21,7 +21,7 @@ License|/fdl]]."]]"""]]
     <youpi> in the long term, that can't work with glibc
     <youpi> because of the thread stub stuff
 
-[[service_solahart_jakarta_selatan__082122541663/libpthread_dlopen]], for example.
+[[libpthread_dlopen]], for example.
 
     <youpi> it's not really possible to keep synchronized
     <youpi> because you have to decide which package you unpack first
