Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 5bdb742e3307601f7f76041fa94342d2e20232f9.

--- a/hurd/translator/pfinet/implementation.mdwn
+++ b/hurd/translator/pfinet/implementation.mdwn
@@ -16,7 +16,7 @@ implementation.
 
 # Bugs
 
-## Those Listed on [[Service_solahart_jakarta_selatan__082122541663]]
+## Those Listed on [[Open_Issues]]
 
 ## [[IPv6]]
 
