Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit b7824df98659018bc92ca0ba14d41e4464c53d98.

--- a/hurd/libports.mdwn
+++ b/hurd/libports.mdwn
@@ -40,7 +40,7 @@ fixed as of [[!message-id "20111030210045.GA4983@myhost"]],
 
 # Open Issues
 
-## Several on the [[/Service_solahart_jakarta_selatan__082122541663]] page
+## Several on the [[/Open_Issues]] page
 
 ## IRC, freenode, #hurd, 2013-11-14
 
