--- a/donate.mdwn
+++ b/donate.mdwn
@@ -76,7 +76,7 @@ focus on one specific problem, and bringing it to completion.
 
 In principle, any Hurd-related development task is applicable (for example,
 from the [[GSoC project ideas|community/gsoc/project_ideas]], or from the
-[[service_solahart_jakarta_selatan__082122541663]] list), but it is of course recommendable to match sponsors'
+[[open_issues]] list), but it is of course recommendable to match sponsors'
 ideas with those of the developers and maintainers.  For this, if you want to
 sponsor a project, but don't know which one to choose, or if you want to work
 on a bounty that is not yet listed on the site, we suggest that you talk to us
