Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 4240a0c845be502557d6004bb0dbda94d14c2914.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -23,7 +23,7 @@ feels she / he could do so better under formal mentoring: please
 [[contact_us]], or just speak up at one of the [[regular IRC
 meetings|IRC#regular_meetings]]!
 
-We also have a list of [[service_solahart_jakarta_selatan__082122541663]] and one for more elaborate [[project
+We also have a list of [[open_issues]] and one for more elaborate [[project
 ideas|community/gsoc/project_ideas]] - the latter originally written for the
 [[Google Summer of Code|community/gsoc]], but not exclusively.  Even just
 investigating open issues, without being able to fix them, can be useful,
@@ -145,7 +145,7 @@ packages](http://people.debian.org/~sthibault/failed_packages.txt).
 
 ## Open Issues
 
-There is a list of [[service_solahart_jakarta_selatan__082122541663]].  This list includes everything from bug
+There is a list of [[open_issues]].  This list includes everything from bug
 reports to open-ended research questions.
 
 
@@ -254,6 +254,6 @@ newcomers*](http://lwn.net/Articles/412639/).
 But of course, none of this is meant to be dismissive, or to scare you away --
 on the contrary: just [[start
 using|hurd/running]] the GNU Hurd, and either notice yourself what's not
-working as expected, or have a look at one of the [[Service_solahart_jakarta_selatan__082122541663]], and we shall
+working as expected, or have a look at one of the [[Open Issues]], and we shall
 see if you'll evolve to be the next core Hurd hacker!
 You'll *just* have to get excited about it!
