Revert "update for rename of open_issues/virtualization.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization.mdwn"
This reverts commit 7d45ec18eb65a80bcd49c7f32fef428ba129788e.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization/file_systems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization/file_systems.mdwn
@@ -11,7 +11,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_hurd]]
 
 Of course, it is possible to use commodity file systems on [[virtualized
-systems|service_solahart_jakarta_selatan__082122541663/virtualization]], like [[hurd/translator/ext2fs]] or
+systems|virtualization]], like [[hurd/translator/ext2fs]] or
 [[hurd/translator/nfs]], but there are also other possibilities which ought to
 be explored.
 
