Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 8dd52b80a76583413f8528e008f178ceb9a962a1.

--- a/news/2011-05-02-foss_factory.mdwn
+++ b/news/2011-05-02-foss_factory.mdwn
@@ -59,7 +59,7 @@ Working on a task and/or suggesting/donating for a new task.
 
 In principle, any Hurd-related development task is applicable (for example,
 from the [[GSoC project ideas|community/gsoc/project_ideas]], or from the
-[[service_solahart_jakarta_selatan__082122541663]] list), but it is of course recommendable to match sponsors'
+[[open_issues]] list), but it is of course recommendable to match sponsors'
 ideas with those of the developers and maintainers.  For this, if you want to
 sponsor a project, but don't know which one to choose, or if you want to work
 on a bounty that is not yet listed on the site, we suggest that you talk to us
