Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 1e6f45790bd6c7713cc5a5c9707531f5b058f75c.

--- a/service_solahart_jakarta_selatan__082122541663/issue_tracking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/issue_tracking.mdwn
@@ -19,13 +19,13 @@ There is a proposal to add/move to <http://debbugs.gnu.org/>.  It can be
 operated by email, Debian people (developers and users) already know how to use
 it.
 
-There are the [[Service_solahart_jakarta_selatan__082122541663]] pages.  This is basically just free-form text
+There are the [[Open_Issues]] pages.  This is basically just free-form text
 enriched by some tags for grouping, editable via the web and through Git
 commit.  [[tschwinge]] added this to the set, and/but mostly is the sole user
 of it, even though casually there are a few other people contributing, and
 surely these pages do show up in web searches.  A more traditional system (like
 the Savannah trackers or the new debbugs) do have their advantages, too, so
-perhaps there's a niche for both these and the [[Service_solahart_jakarta_selatan__082122541663]].
+perhaps there's a niche for both these and the [[Open_Issues]].
 
 IRC, freenode, #hurd, 2011-08-31:
 
