Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 7d6fed7a5212bc6642d7428af2b99d2d302d0695.

--- a/news/2010-08-31.mdwn
+++ b/news/2010-08-31.mdwn
@@ -55,10 +55,10 @@ else="[[!paste id=full_news]]"]]
 
 > Thomas Schwinge [added some more
 > information](http://lists.gnu.org/archive/html/bug-hurd/2010-08/msg00066.html)
-> to the web pages, notably a bunch of [[service_solahart_jakarta_selatan__082122541663]] reports, to have them
+> to the web pages, notably a bunch of [[open_issues]] reports, to have them
 > registered in a generic place, and to facilitate coordination.  If you're
 > looking for a Hurd-related project to work on, go looking
-> [[there|service_solahart_jakarta_selatan__082122541663]]!  He also converted and merged some of the [hurdextras
+> [[there|open_issues]]!  He also converted and merged some of the [hurdextras
 > CVS repositories](http://www.nongnu.org/hurdextras/) into the [hurd Git
 > repositories](http://git.savannah.gnu.org/cgit/hurd) and our
 > [incubator](http://git.savannah.gnu.org/cgit/hurd/incubator.git/refs/).  All
