Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 572577604d2a439dfd6d09f9e720bdbf96f3ccbf.

--- a/sidebar.mdwn
+++ b/sidebar.mdwn
@@ -30,7 +30,7 @@ applying for a GNU Hurd project -- details to be found on our
       * [[QEMU Images|hurd/running/qemu]]
       * [[Getting Help]]
       * [[Project Ideas|community/gsoc/project_ideas]]
-      * [[Service_solahart_jakarta_selatan__082122541663]]
+      * [[Open Issues]]
   * **[[Documentation]]**
       * [[FAQ]]
 
