Revert "update for rename of open_issues.mdwn to service_solahart_jakarta_selatan__082122541663.mdwn"
This reverts commit 3b2119f0f115ba0d6844950cd611e05fbba48733.

--- a/user/jkoenig/java/discussion.mdwn
+++ b/user/jkoenig/java/discussion.mdwn
@@ -57,7 +57,7 @@ it.*
 There is also a possibility that parts of your proposal will be split off; in
 cases where we think they're valuable to follow, but not at this time.  (As you
 know, your proposal is not really a trivial one, so it may just be too much for
-one person's summer.)  Such bits could be moved to [[service_solahart_jakarta_selatan__082122541663]] pages,
+one person's summer.)  Such bits could be moved to [[open_issues]] pages,
 either new ones or existing ones, as applicable.
 
 
