mention the starting guide talk

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -68,6 +68,9 @@ concepts|microkernel/mach/concepts]], [[Hurd's concepts|hurd/concepts]], the
 *[[hurd/critique]]*.  Until you can understand and do the basic exercises
 listed there, you won't be able to significantly contribute to the Hurd.
 
+You can also have a look at the
+[starting guide talk](https://fosdem.org/2015/schedule/event/hurd/).
+
 For more reading resources, please see these web pages, for example,
 [[Hurd_documentation|hurd/documentation]] and
 [[Mach_documentation|microkernel/mach/documentation]] for links to a bunch of
