also mention lazytime

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -109,7 +109,7 @@ Look at `[glibc]/hurd/lookup-retry.c` for how [[`FS_RETRY_MAGICAL`
 lookups|hurd/interface/dir_lookup]] work.
 * Add a tool to trace system calls, by using gnumach's Syscall-Emulation, see <http://www.gnu.org/software/hurd/gnumach-doc/Syscall-Emulation.html>
 * Improve our [[FUSE library|hurd/libfuse]].
-* Add a relatime option to ext2fs.
+* Add a relatime or lazytime option to ext2fs.
 
 <a name="porting"></a>
 ## Porting Packages
