[[!inline pages="internal(recent_changes/change_*)" template=recentchanges show=0]]

--- a/recent_changes.mdwn
+++ b/recent_changes.mdwn
@@ -12,3 +12,4 @@ is included in the section entitled
 
 [[!inline pages="internal(recent_changes/change_*)" template=recentchanges
 show=0]]
+[[recent change]]
