Add problematic package

--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -29,3 +29,4 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 
   * php-yac
   * gnu-smalltalk
+  * globus-gram-job-manager
